phase2_Dev/src/objects/EEC_HistoricalVisitItemStaging__c.object
<CustomObject>
    <description>Staging table used to load historic Visit Item Data into target object &apos;visit Items&apos;</description>
    <fields>
        <fullName>EEC_Comment__c</fullName>
        <label>Comment</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EEC_ComplianceStatusDesc__c</fullName>
        <label>ComplianceStatusDesc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_ErrorText__c</fullName>
        <label>ErrorText</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_HeaderVisitItem__c</fullName>
        <formula>EEC_VisitHeaderId__c + &apos;|&apos; + EEC_Hostname__c + &apos;|&apos; +  EEC_VisitDetailId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HeaderVisitItem</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_HeaderVisit__c</fullName>
        <formula>EEC_VisitHeaderId__c + &apos;|&apos; + EEC_Hostname__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HeaderVisit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_Hostname__c</fullName>
        <label>Hostname</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_New_Hostname__c</fullName>
        <label>New Hostname</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_RegGroupItemDesc__c</fullName>
        <label>RegGroupItemDesc</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_RegGroupItem__c</fullName>
        <label>RegGroupItem</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_VisitDetailId__c</fullName>
        <label>VisitDetailId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_VisitHeaderId__c</fullName>
        <label>VisitHeaderId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEC_VisitItem_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visit Item Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HistoricalVisitStaging__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HistoricalVisitStaging</label>
        <referenceTo>EEC_HistoricalVisitStaging__c</referenceTo>
        <relationshipLabel>HistoricalVisitItemStaging</relationshipLabel>
        <relationshipName>HistoricalVisitItemStaging</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>HistoricalVisitItemStaging</label>
    <listViews>
        <fullName>All</fullName>
        <columns>EEC_VisitHeaderId__c</columns>
        <columns>EEC_Hostname__c</columns>
        <columns>EEC_VisitDetailId__c</columns>
        <columns>EEC_ErrorText__c</columns>
        <columns>EEC_RegGroupItem__c</columns>
        <columns>EEC_HeaderVisit__c</columns>
        <columns>EEC_HeaderVisitItem__c</columns>
        <columns>EEC_VisitItem_Processed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EEC_HeaderVisit__c</field>
            <operation>equals</operation>
            <value>395|EEC-TAB004</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Header_395</fullName>
        <columns>NAME</columns>
        <columns>EEC_HeaderVisit__c</columns>
        <columns>EEC_HeaderVisitItem__c</columns>
        <columns>HistoricalVisitStaging__c</columns>
        <columns>EEC_VisitItem_Processed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EEC_HeaderVisit__c</field>
            <operation>contains</operation>
            <value>395</value>
        </filters>
        <label>Header = 395</label>
    </listViews>
    <listViews>
        <fullName>Specific_Visit</fullName>
        <columns>NAME</columns>
        <columns>EEC_HeaderVisit__c</columns>
        <columns>EEC_ErrorText__c</columns>
        <columns>EEC_RegGroupItem__c</columns>
        <columns>EEC_RegGroupItemDesc__c</columns>
        <columns>EEC_VisitItem_Processed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EEC_HeaderVisit__c</field>
            <operation>equals</operation>
            <value>5942|EEC-XT3-LAW-003</value>
        </filters>
        <label>Specific Visit</label>
    </listViews>
    <listViews>
        <fullName>Visit_Item_Processed_All</fullName>
        <columns>EEC_VisitHeaderId__c</columns>
        <columns>EEC_Hostname__c</columns>
        <columns>EEC_VisitDetailId__c</columns>
        <columns>EEC_RegGroupItem__c</columns>
        <columns>EEC_HeaderVisit__c</columns>
        <columns>EEC_HeaderVisitItem__c</columns>
        <columns>EEC_VisitItem_Processed__c</columns>
        <columns>EEC_ErrorText__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EEC_VisitItem_Processed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Visit Item Processed - All</label>
    </listViews>
    <nameField>
        <displayFormat>LVI-{0000}</displayFormat>
        <label>VisitItemStagingId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HistoricalVisitItemStaging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>